update style.css to prevent horizontal movement on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -207,7 +207,13 @@ nav li.active a {
 }
 
 @media (max-width: 900px) {
+  html,
   body {
+    overflow-x: hidden;
+  }
+
+  body {
+    position: relative;
     background-color: var(--branding-seondary-color);
   }
 
